c4prj1_deck/grade.txt
Grading at Mon Apr  1 01:16:23 UTC 2019
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:202:27: error: request for member ‘value’ in something not a structure or union
       if(*(hand->cards[j]).value == i) {
                           ^
Compilation of eval.c failed

Overall Grade: F
